# pypractice

./: README.md  pypractice.code-workspace  pyproject.toml
pypractice/: Exponential.py  MixtureDistribution.py  Normal.py  WeibullNormal.py  __init__.py  em_utils_functional.py  logsumexp.py  tribble.py  utils.py
pypractice/__pycache__/: oddoreven.py
src/: main_em.py  main_func_em.py  main_oo_em.py  zip_examples.py
