[tool.poetry]
name = "pypractice"
version = "0.1.0"
description = ""
authors = ["Hillary Koch <hbk5086@psu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.1.3"
scipy = "^1.14.1"
statsmodels = "^0.14.4"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
